--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>CarsApp</title>
-  <base href="'/cars-app/'">
+  <base href="/cars-app/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="'/cars-ap/'styles.5c1926e5a9570385.css"></head>
+<style>*{padding:0;margin:0}@font-face{font-family:Roboto;src:url(Roboto.3d305e3241f69eb1.ttf)}@font-face{font-family:Roboto;src:url(Robotobold.6262c49945b78f15.ttf);font-weight:700}body{font-family:Roboto,sans-serif}</style><link rel="stylesheet" href="/cars-app/styles.5c1926e5a9570385.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="/cars-app/styles.5c1926e5a9570385.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="'/cars-ap/'runtime.a3aa56ba3330a534.js" type="module"></script><script src="'/cars-ap/'polyfills.6f8f8b89df600ca6.js" type="module"></script><script src="'/cars-ap/'main.d7ee3a3bfcf4d2a9.js" type="module"></script>
+<script src="/cars-app/runtime.a3aa56ba3330a534.js" type="module"></script><script src="/cars-app/polyfills.6f8f8b89df600ca6.js" type="module"></script><script src="/cars-app/main.f9026db1c22f9b15.js" type="module"></script>
 
 </body></html>
